--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="num.css">
     <title>seashellz</title>
+    <link rel="icon" type="image/x-icon" href="seashell.webp">
 </head>
 <body>
     <h2></h2>
