--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="num.css">
-    <title>seashellz</title>
-    <link rel="icon" type="image/x-icon" href="seashell.webp">
-</head>
-<body>
-    <h2></h2>
-    <button>CLICK HERE</button>
-    <script src="num.js"></script>
-</body>
+<html>
+    <head>
+        <title>seashellz</title>
+        <link rel="icon" type="image/x-icon" href="seashell.webp">
+        <link rel="stylesheet" href="seashellz.css">
+    </head>
+    <body>
+        <nav id="navBarId" class="navBar">
+            <header>
+                <img src="seashell.webp" class="navImg">
+                <h3>navigation</h1>
+            </header>
+            <a href="#">
+                <img src="beach.webp" alt="beach icon" class="navIcon">beach
+            </a>
+            <a href="#">
+                <img src="ocean.webp" alt="ocean icon" class="navIcon">ocean
+            </a>
+            <a href="#">
+                <img src="sky.webp" alt="sky icon" class="navIcon">sky
+            </a>
+            <a href="#">
+                <img src="cave.webp" alt="cave icon" class="navIcon">cave
+            </a>
+            <a href="#">
+                <img src="life.webp" alt="life icon" class="navIcon">life
+            </a>
+            <a href="#">
+                <img src="weather.webp" alt="weather icon" class="navIcon">weather
+            </a>
+            <a href="#">
+                <img src="exiscope.webp" alt="exiscope icon" class="navIcon">exiscope
+            </a>
+            <footer>
+                <h3>footer</h3>
+            </footer>
+        </nav>
+        <main>
+
+        </main>
+        <script src="seashellz.js" defer></script>
+    </body>
 </html>
